--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["metalwarrior665 <lukaskrivka@gmail.com>"]
 edition = "2018"
 
 [profile.dev]
-opt-level = "s" 
+opt-level = 1 
 
 [dependencies]
 reqwest = {version = "^0.11", features = ["gzip", "blocking"]}
