--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 
 [profile.dev]
 opt-level = 1 
+debug = 0
+overflow-checks = false
 
 [dependencies]
 reqwest = {version = "^0.11", features = ["gzip", "blocking"]}
